--- a/s04.html
+++ b/s04.html
@@ -1,3 +1,52 @@
 <script>
-    
+    // for 사용방법
+
+    // 자바스크립트 배열은
+    // 자바의 배열과 ArrayList의 혼합 느낌이다
+    // 타입이 다른 값이 들어갈 수 있다
+    // 길이가 가변적이다
+    // 메소드가 있다
+
+    const intArray = [10, 20, 30];
+
+    // 기본 for
+    for (let i = 0; i < intArray.length; i++) {
+        const element = intArray[i];
+        console.log(element);
+    }
+
+    // for in - 배열이나 객체의 key값을 사용한다
+    for (const i in intArray) {
+        console.log(intArray[i]);
+    }
+
+    const obj = {
+        name : "홍길동",
+        age : 12
+    }
+
+    for (const key in obj) {
+        console.log(key);
+        console.log(obj[key]);
+    }   
+
+    // 배열의 value를 사용한다
+    for (const value of intArray) {
+        console.log(value);
+    }
+
+    // forEach 매개변수로 함수를 받는다
+    intArray.forEach(function(value){
+        console.log(value)
+    });
+
+    intArray.forEach((value) => console.log(value));
+
+    // 배열의 메소드
+    // 리턴값이 없는 것이 특징
+    intArray.forEach((value, index, array) =>{
+        console.log(value);
+        console.log(index); 
+        console.log(array);
+    })
 </script>
